Fix: Change a couple of text colors for dark theme so they're visible.

--- a/frontend/portfolio-app/src/css/Custom.css
+++ b/frontend/portfolio-app/src/css/Custom.css
@@ -65,6 +65,7 @@
 
     .content-section {
         background-color: var(--background-color-dark);
+        color: var(--text-color-dark);
     }
 
     .navbar {
@@ -154,6 +155,7 @@
 
     #footer {
         background-color: var(--highlight-color-dark);
+        color: var(--text-color-dark);
     }
 }
 
